# ssuAgent

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/argocd/: application-ssu-agent.yaml
deploy/charts/ssu-agent/: Chart.yaml  values-prod.yaml  values.yaml
deploy/charts/ssu-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.example.yaml  service.yaml
docs/: README.md  deploy.md  troubleshooting.md
docs/adr/: 0001-supervisor-architecture.md  0009-agent-edge-hardening.md  0011-thread-stable-principal-binding.md  0012-supervisor-narration-suppression.md  0013-library-reservation-preauth-gate.md  0014-mcp-connection-resilience.md  0015-optional-anthropic-provider.md  0016-mcp-content-block-hitl-unwrap.md  0017-hitl-resume-command-and-tool-pair-sanitizer.md  0018-deterministic-library-routing-and-wait-followthrough.md  0019-hitl-turn-scope-routing-and-fallback-dedup.md  0020-personal-academic-auth-gating.md  0021-deterministic-public-seat-availability.md  0022-deterministic-lms-export-download.md  003-postgres-checkpointer.md  004-multi-provider-llm-fallback.md  005-router-bug-fix-prepare-collision.md
evals/: README.md  routing_contract.v1.json
scripts/: dump_stream_metadata.py
ssu_agent/: config.py  graph.py  llm_factory.py  main.py  mcp_client.py  tool_results.py
ssu_agent/agents/: academic.py  auth_guard.py  library.py  lms.py  react_loop.py
ssu_agent/rag/: tool.py
ssu_agent/supervisor/: graph.py  state.py
tests/: test_academic_agent.py  test_auth_guard.py  test_capacity_error.py  test_eval_routing.py  test_eval_safety.py  test_library_agent.py  test_llm_factory.py  test_lms_agent.py  test_local_rag_tool.py  test_main_security.py  test_mcp_client.py  test_pg_pool_config.py  test_react_loop.py  test_stream_interrupt.py  test_supervisor.py  test_supervisor_narration.py  test_tool_results.py
