[project]
name = "ssu-agent"
version = "0.2.0"
description = "LangGraph campus assistant agent for Soongsil University"
requires-python = ">=3.12"
dependencies = [
    # Pinned to the 1.2.x line: the graph relies on 1.2.4-specific behaviour
    # (interrupt() surfaces only inside on_chain_stream, Command-from-tools not
    # propagating, RunnableWithFallbacks lacking bind_tools). An upgrade past 1.2.x
    # would silently break HITL with green tests — see docs/adr/0001.
    "langgraph>=1.2.4,<1.3",
    "langchain-mcp-adapters>=0.1",
    "langchain-google-genai>=2",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.1",
    "fastapi>=0.115",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.30",
    "langchain-openai>=1.3.0",
    "langchain-groq>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
