[project]
name = "ssu-agent"
version = "0.2.0"
description = "LangGraph campus assistant agent for Soongsil University"
requires-python = ">=3.12"
dependencies = [
    # Pinned to the tested 1.2.x runtime: interrupt streaming, nested graph
    # events, and HITL checkpoint/resume are compatibility-sensitive. Review the
    # ADRs and stream-contract tests before crossing the 1.3 boundary.
    "langgraph>=1.2.4,<1.3",
    "langchain>=1.3.14,<1.4",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.28.1,<2",
    "langchain-google-genai>=4.2.7",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.1",
    "fastapi>=0.139.2",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.30",
    "langchain-openai>=1.3.5",
    "langchain-groq>=0.2",
    "langchain-anthropic>=0.3",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2,<3",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
